fix: schema & responses
