# openapi.yml
@@ -360,35 +360,15 @@ paths:
                   message:
                     type: string
   /.well-known/ai-plugin.json:
-    post:
+    get:
       summary: qwerty
       tags:
         - debates
       description: Route for the requires ai-plugin.json file for the AI plugin.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                argument:
-                  type: object
-                  properties:
-                    content:
-                      type: string
-                    authorUsername:
-                      type: string
-      parameters:
-        - schema:
-            type: string
-          in: path
-          name: id
-          required: true
-          description: debate id
       security:
         - apiKey: []
       responses:
-        "201":
+        "200":
           description: Successful response
           content:
             application/json:
@@ -396,8 +376,34 @@ paths:
                 description: Successful response
                 type: object
                 properties:
-                  data:
-                    $ref: argument#
+                  schema_version:
+                    type: string
+                  name_for_human:
+                    type: string
+                  name_for_model:
+                    type: string
+                  description_for_human:
+                    type: string
+                  description_for_model:
+                    type: string
+                  auth:
+                    type: object
+                    properties:
+                      type:
+                        type: string
+                  api:
+                    type: string
+                    properties:
+                      type:
+                        type: string
+                      url:
+                        type: string
+                  logo_url:
+                    type: string
+                  contact_email:
+                    type: string
+                  legal_info_url:
+                    type: string
         default:
           description: Default response
           content:
@@ -411,45 +417,23 @@ paths:
                   message:
                     type: string
   /logo.png:
-    post:
+    get:
       summary: qwerty
       tags:
         - debates
       description: Route for posting a new argument to a public debate. The debate is
         public, so anyone can join. and post an argument
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                argument:
-                  type: object
-                  properties:
-                    content:
-                      type: string
-                    authorUsername:
-                      type: string
-      parameters:
-        - schema:
-            type: string
-          in: path
-          name: id
-          required: true
-          description: debate id
       security:
         - apiKey: []
       responses:
-        "201":
+        "200":
           description: Successful response
           content:
             application/json:
               schema:
                 description: Successful response
-                type: object
-                properties:
-                  data:
-                    $ref: argument#
+                type: string
+                format: binary
         default:
           description: Default response
           content:
@@ -463,45 +447,22 @@ paths:
                   message:
                     type: string
   /legal:
-    post:
+    get:
       summary: qwerty
       tags:
         - debates
       description: Route for posting a new argument to a public debate. The debate is
         public, so anyone can join. and post an argument
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                argument:
-                  type: object
-                  properties:
-                    content:
-                      type: string
-                    authorUsername:
-                      type: string
-      parameters:
-        - schema:
-            type: string
-          in: path
-          name: id
-          required: true
-          description: debate id
       security:
         - apiKey: []
       responses:
-        "201":
+        "200":
           description: Successful response
           content:
             application/json:
               schema:
                 description: Successful response
-                type: object
-                properties:
-                  data:
-                    $ref: argument#
+                type: string
         default:
           description: Default response
           content:
